--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -52,7 +52,7 @@
       <li class="spacer">&nbsp;</li>
 
       <li class="game game-top winner">
-        <font color="white">Team {{1+i}} {{Team}}</font> <span>
+        <font color="white">{{Team}}</font> <span>
         </span>
       </li>
       <div class="btn-group-sm">
