added code to remove or show last round  brackets

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -11,18 +11,13 @@
     <font color="white">Participants / Teams</font>
   </label>
   <li>
-    <font color="white">Limit 8 participants/teams.</font>
-  </li>
-  <li>
-    <font color="white">One entry per line.</font>
+    <font color="white">Seperate Participants with comma.</font>
   </li>
   <textarea name="teamName" class="form-control" id="exampleFormControlTextarea1" rows="3"
-    placeholder="Participant Names / Team Names" [disabled]="textDisabled" [(ngModel)]="newTeam"></textarea>
+    placeholder="Participant1, Participant2, Participant3, ..." [disabled]="textDisabled" [(ngModel)]="teamName" [value]="inText"></textarea>
 </div>
 
-<!-- ?? SUBMIT navigateTo('courses'); ??-->
-<!-- DISABLE SUBMIT after click until EDIT or CLEAR is clicked -->
-<button style="margin-right: 10px" [disabled]="disableSubmitButton" (click)="tourney(); addTeams(newTeam)"
+<button style="margin-right: 10px" [disabled]="disableSubmitButton" (click)="tourney(teamName)"
   class="btn btn-success" type="button" mat-raised-button>
   Submit
 </button>
@@ -38,44 +33,36 @@
 
 <h1>
   <br>
-  <!-- if making 2nd page, call title entered through previous page -->
   {{tourneyTitle}}
-
 </h1>
-<main id="tournament">
 
-
+<ng-container *ngIf="teamNames.length > 0">
+<main id="tournament" *ngIf="teamNames.length > 0">
   <ul class="round round-1">
-    <tr *ngFor="let Team of teams; let i = index">
-      <!-- <tr *ngFor="let team of teamArray; let i = index"> -->
-      <!-- loop for how many teams -->
+    <tr *ngFor="let Team of teamNames; let i = index">
       <li class="spacer">&nbsp;</li>
 
-      <li class="game game-top winner">
+      <li class="game game">
         <font color="white">{{Team}}</font> <span>
-        </span>
-      </li>
-      <div class="btn-group-sm">
-        <button type="button" class="btn btn-success" (click)="winner(1, i, getTeamName(i))">Advance</button>
-        <button class="btn btn-danger pull-right" (click)="removeTeams(i)">X</button>
-      </div>
+          <div class="btn-group-sm">
+            <button type="button" class="btn btn-success" (click)="winner(i, i, getTeamName(i))">Advance</button>
+            <button class="btn btn-danger pull-right" (click)="removeTeams(i)">X</button>
+          </div>
+        </span></li>
       <li class="game game-spacer">&nbsp;</li>
     </tr>
   </ul>
 
-
   <ul class="round round-2">
-    <!-- loop for winning teams-->
     <li class="spacer">&nbsp;</li>
 
-    <li class="game game-top winner">
-      <font color="white">{{getWinnerName(1, 0)}}{{getWinnerName(1, 1)}}</font> <span>
+    <li class="game">
+      <font color="white">{{getWinnerName(0, 0)}}</font> <span>
         <div class="btn-group-sm">
           <button type="button" class="btn btn-success"
-            (click)="winner(2, 1, getWinnerName(1, 0)); winner(2, 0, getWinnerName(1, 1))">Advance</button>
+            (click)="winner(2, 0, getWinnerName(0, 0))">Advance</button>
         </div>
-      </span>
-    </li>
+      </span></li>
     <li class="game game-spacer">&nbsp;</li>
     <li class="game game-bottom ">
       <font color="white">{{getWinnerName(1, 2)}}{{getWinnerName(1, 3)}}</font><span>
@@ -111,7 +98,6 @@
 
 
   <ul class="round round-3">
-    <!-- loop calling winning teams-->
     <li class="spacer">&nbsp;</li>
 
     <li class="game game-top winner">
@@ -137,7 +123,6 @@
 
 
   <ul class="round round-5">
-    <!-- call winning team-->
     <li class="game game-top winner">
       <font color="white">{{getWinnerName(3, 1)}}{{getWinnerName(3, 2)}}</font> <span>
         <font color="white">WINNER!</font>
@@ -145,3 +130,4 @@
     </li>
   </ul>
 </main>
+</ng-container>
