--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,7 @@
 
 <body>
     <div class="main-container">
+        <app-toast></app-toast>
         <app-main-header></app-main-header>
         <app-main-content></app-main-content>
         <router-outlet class="main-outlet"></router-outlet>
