--- a/src/app/main-content/main-content.component.css
+++ b/src/app/main-content/main-content.component.css
@@ -6,6 +6,8 @@
     background-image: url(https://dotesports-media.nyc3.cdn.digitaloceanspaces.com/wp-content/uploads/2018/08/12005158/maxresdefault.jpg);
     background-size: 100% 100%;
     background-repeat: no-repeat;
+    background-position: right 100% top 30%;
+    background-attachment: fixed;
     
 }
 
